Different color tags, fixed alignment issue, minor tweaks to "Learn More" button

--- a/src/components/learn-more.css
+++ b/src/components/learn-more.css
@@ -18,8 +18,7 @@
   padding: var(--dl-space-space-halfunit);
   align-self: flex-start;
   align-items: center;
-  padding-left: var(--dl-space-space-oneandhalfunits);
-  padding-right: var(--dl-space-space-unit);
+  padding-left: var(--dl-space-space-unit);
   flex-direction: row;
 }
 .learn-more-icons-container {
